--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,11 @@
     <![endif]-->
 </head>
 <body>
+  <nav class="navbar navbar-inverse" role="navigation">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/"><%= t('brand') %></a>
+    </div>
+  </nav>
 
   <div class="container">
     <%= yield %>
