Let admins edit user info

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h1><%= t('.heading') %></h1>
+
+<%= form_for @user, html: { class: 'form-horizontal' } do |f| %>
+  
+  <%= render partial: 'form', object: f %>
+
+  <div class="form-group">
+    <div class="col-sm-1 col-sm-offset-2">
+      <%= button_tag t('save'), class: 'btn btn-primary'  %> 
+    </div>
+    <div class="col-sm-1">
+      <%= link_to t('cancel'), users_path, class: 'btn btn-warning' %>
+    </div>
+  </div>
+<% end %>
