--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -35,6 +35,10 @@
 <div class="form-group">
   <%= form.label :role, t('.role'), class: 'col-sm-2 control-label' %>
   <div class="col-sm-3">
-    <%= form.select :role, User.roles_select, {}, { class: 'form-control' } %>
+    <% if form.object.admin? %>
+      <%= role_for(form.object) %>
+    <% else %>
+      <%= form.select :role, User.roles_select, {}, { class: 'form-control' } %>
+    <% end %>
   </div>
 </div>
