--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <div class="form-group <%= form.object.errors[:name_en].empty? ? '' : 'has-error' %>">
-  <%= form.label :name_ru, t('name_en'), class: 'col-sm-2 control-label' %>
+  <%= form.label :name_en, t('name_en'), class: 'col-sm-2 control-label' %>
   <div class="col-sm-6">
     <%= form.text_field :name_en, class: 'form-control', 
         placeholder: t('name_en_placeholder') %>
