A user can participate in a team as a player or coach

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -24,7 +24,7 @@
       <% end %>
     </td>
     <td class="col-sm-3">
-      <%= coach_list_for(team) %>
+      <%= user_list(team.users.coaches) %>
     </td>
     <td class="col-sm-3">
       <%= league_list_for(team) %>
