--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -2,14 +2,20 @@
 </h1>
 <h2 class="text-info"><%= localized_name(@team) %></h2>
 
-<% unless @team.coaches.empty? %>
-  <p>
-    <strong><%= t('coaches') %>:</strong> <%= coach_list_for(@team) %> 
-  </p>
-<% end %>
-
 <% unless @team.leagues.empty? %>
   <p>
     <strong><%= t('welcome.index.leagues') %>:</strong> <%= league_list_for(@team) %> 
+  </p>
+<% end %>
+
+<% unless @team.users.coaches.empty? %>
+  <p>
+    <strong><%= t('coaches') %>:</strong> <%= user_list(@team.users.coaches) %> 
+  </p>
+<% end %>
+
+<% unless @team.users.players.empty? %>
+  <p>
+    <strong><%= t('players') %>:</strong> <%= user_list(@team.users.players) %> 
   </p>
 <% end %>
