--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -42,3 +42,27 @@
     <% end %>
   </div>
 </div>
+
+<div class="form-group">
+  <%= label_tag 'teams', t('welcome.index.teams'), class: 'col-sm-2 control-label' %>
+  <div class="col-sm-10">
+    <%= hidden_field_tag 'user[team_ids][]', nil %>
+    <% @teams.each_with_index do |team, i| %>
+      <% if (i % 3) == 0 %>
+        <div class="row">
+      <% end %>
+
+      <div class="checkbox col-sm-4">
+        <label>
+          <%= check_box_tag 'user[team_ids][]', team.id, 
+                            @user.team_ids.include?(team.id) %>
+          <%= localized_name(team) %>
+        </label>
+      </div>
+
+      <% if (i % 3) == 2 || i == (@teams.count - 1) %>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
