--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,14 +3,25 @@
 <%= link_to t('.new'), new_user_path, class: 'btn btn-primary' %>
 
 <table class="users table table-striped">
+  <thead>
+    <th class="col-sm-5"></th>
+    <th class="col-sm-4"><%= t('welcome.index.teams') %></th>
+    <th class="col-sm-3"></th>
+  </thead>
 <% @users.each do |user| %>
-  <tr>
-    <td class="role-name col-sm-6">
-      <%= role_for(user) %>
+  <tr id="<%= dom_id(user) %>">
+    <td class="role-name">
       <%= link_to localized_name(user), user_path(user) %>
+      <%= role_for(user) %>
     </td>
-    <td class="col-sm-6">
+    <td>
+      <%= team_list_for(user) %>
+    </td>
+    <td>
       <%= link_to t('edit'), edit_user_path(user), class: 'btn btn-info btn-sm' %>
+      <%= link_to t('delete'), user_path(user), remote: true, method: 'delete',
+                    class: 'btn btn-danger btn-sm', 
+                    data: { confirm: t('confirm') } %>
     </td>
   </tr>
 <% end %>
