--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1><%= t('.heading') %></h1>
+<h2 class="text-info"><%= localized_name(@user) %> <%= role_for(@user) %></h2>
+
+
+<% unless @user.teams.empty? %>
+  <p>
+    <strong><%= t('welcome.index.teams') %>: </strong>
+    <%= team_list_for(@user) %> 
+  </p>
+<% end %>
